<resources>
    <string name="app_name">AP-FIBER</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGV2ZWxvcGVyeHl6IiwiYSI6ImNqa2poMXV1cjFibzQza2p5c3YyZGl6cGMifQ.uMu2kiKV4918S7ITBjdXZQ</string>
    <string name="register_message">We will send you a Verification code via SMS to verify your Phone number. Ensure that you have a working SMS plan. Carrier charges may apply</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signin">SIGNIN</string>
    <string name="hint_otp">Verification code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_voice_rec">action voice rec</string>
    <string name="action_download_map">Download Map</string>
    <string name="action_settings">Settings</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="details">DETAILS</string>
    <string name="hint_click_building">Click on building</string>
    <string name="gp_item1">GP Building Civil Survey</string>
    <string name="gp_item2">GP Power Survey</string>
    <string name="tk_item1">Taluka Bilding Civil Survey</string>
    <string name="tk_item2">Taluka Power Survey</string>
    <string name="taluka_name">Taluka Name</string>
    <string name="hint_taluka_name">Taluka Name</string>
    <string name="taluka_id">Taluka Id</string>
    <string name="hint_taluka_id">Taluka Id</string>
    <string name="gp_name">GP Name</string>
    <string name="hint_gp_name">GP Name</string>
    <string name="hint_gp_id">GP Id</string>
    <string name="gp_id">GP Id</string>
    <string name="site_address">Site Address</string>
    <string name="hint_site_address">site address</string>
    <string name="latitude">Latitude</string>
    <string name="hint_latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="hint_longitude">longitude</string>
    <string name="official_working_hours">official_working_hours</string>
    <string name="hint_official_working_hours">official_working_hours</string>
    <string name="site_contact_person_name">Site Contact Person Name</string>
    <string name="hint_site_contact_person_name">site_contact_person_name</string>
    <string name="contact_number">Contact Number</string>
    <string name="hint_contact_number">contact number</string>
    <string name="survey_txt">Site Survey</string>
    <string name="size">Size</string>
    <string name="height">Height</string>
    <string name="hint_size">size</string>
    <string name="hint_height">Height</string>
    <string name="FloorceilingType"><![CDATA[Floor & ceiling Type]]></string>
    <string name="hint_FloorceilingType"><![CDATA[Floor & ceiling Type]]></string>
    <string name="Airconditioningavailability">Air Conditioning availability</string>
    <string name="hint_airconditioningavailability">Air Conditioning availability</string>
    <string name="airconditioningtons">Air Conditioning tonnage</string>
    <string name="hint_airconditioningtons">Air Conditioning tonnage</string>
    <string name="store_room_space_availability">Store Room Space availability</string>
    <string name="hint_store_room_space_availability">Store Room Space availability</string>
    <string name="store_room_space">Store Room Space</string>
    <string name="hint_store_room_space">Store Room Space</string>
    <string name="secutity_of_store_room">Security of Store Room</string>
    <string name="uncluttered_space_for_solar_panel">Uncluttered Space for Solar Panel</string>
    <string name="space_for_solar_panels">Space for solar panels</string>
    <string name="hint_space_for_solar_panels">Space for solar panels</string>
    <string name="assessment_of_site_earthing">Assessment of site earthing</string>
    <string name="site_accessibility">Site Accessibility (Access Road)</string>
    <string name="distance_to_road_access">Distance to access road</string>
    <string name="hint_distance_to_road_access">Distance to access road</string>
    <string name="is_space_available_for_tower_outside">Is space available for Tower outside</string>
    <string name="hint_is_space_available_for_tower_outside">Is space available for Tower outside</string>
    <string name="size_of_space_for_tower">Size of space for Tower</string>
    <string name="hint_size_of_space_for_tower">Size of space for Tower</string>
    <string name="identification_of_ofc_cable_entry_exit_point"><![CDATA[Identification of OFC Cable Entry & Exit Point]]></string>
    <string name="hint_identification_of_ofc_cable_entry_exit_point"><![CDATA[Identification of OFC Cable Entry & Exit Point]]></string>
    <string name="proposed_chamber_location_out_side_taluks_building_with_landmark">Proposed Chamber Location Out-side Taluka Building with Landmark</string>
    <string name="hint_proposed_chamber_location_out_side_taluks_building_with_landmark">Proposed Chamber Location Out-side Taluka Building with Landmark  \tYes/No\t NOT APPLICABLE AT GP LOCATION</string>
    <string name="tk_photo_txt">Taluka Building Photo</string>
    <string name="gp_photo_txt">GP Building Photo</string>
    <string name="power_infrastructer_txt">Power Infrastructure</string>
    <string name="electricity_eb_availability">Electricity / EB availability</string>
    <string name="hint_electricity_eb_availability">Electricity / EB availability</string>
    <string name="availability_of_eb">Availability of EB in hours</string>
    <string name="hint_availability_of_eb">Availability of EB in hours</string>
    <string name="switch_board_type">Switch board type/Power sockets</string>
    <string name="hint_switch_board_type">Switch board type/Power sockets</string>
    <string name="power_interruption_frequency">Power interruption frequency in a month</string>
    <string name="hint_power_interruption_frequency">Power interruption frequency in a month</string>
    <string name="availability_of_backup_power">Availability of Backup Power and Capacity</string>
    <string name="hint_availability_of_backup_power">Availability of Backup Power and Capacity</string>
    <string name="availability_of_earthing_point">Availability of Earthing point</string>
    <string name="hint_availability_of_earthing_point">Availability of Earthing point</string>
    <string name="earthing_accessories">If Earthing point No, Requirement of Earthing accessories</string>
    <string name="hint_earthing_accessories">If Earthing point No, Requirement of Earthing accessories</string>
    <string name="space_available_for_cable_tray">Space availability for cable tray</string>
    <string name="hint_space_available_for_cable_tray">Space availability for cable tray</string>
    <string name="distance_from_new_earthing_point">Distance from New Earthing point to 42 U Rack Location (In meter)</string>
    <string name="hint_distance_from_new_earthing_point">Distance from New Earthing point to 42 U Rack Location (In meter)</string>
    <string name="distance_from_new_ups_location">Distance from New UPS Location to 42 U Rack Location  (In meter)</string>
    <string name="hint_distance_from_new_ups_location">Distance from New UPS Location to 42 U Rack Location  (In meter)</string>
    <string name="distance_from_new_rack_location">Distance from New RACK location to EB Supply         point (In meter)</string>
    <string name="hint_distance_from_new_rack_location">Distance from New RACK location to EB Supply         point (In meter)</string>
    <string name="location_txt">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="survey_text">ASSET SURVEY</string>
    <string name="execution_txt">EXECUTION</string>
    <string name="pick_image_intent_text">Select option</string>
    <string name="duct_missing">Duct Missing Survey</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="pole_txt">pole</string>
    <string name="pop_txt">pop</string>
    <string name="name_of_pop">name of pop</string>
    <string name="hint_battery_backup">no of battery</string>
    <string name="hint_olt_serial_no">olt serial no</string>
    <string name="hint_switch">enter serial no</string>
    <string name="switch_add_text"><a href=""> add </a>
</string>
    <string name="rectangular_cement">Rectangular Cement</string>
    <string name="rectangular_iron">Rectangular Iron</string>
    <string name="round_cement">Round Cement</string>
    <string name="sag_yes">Yes</string>
    <string name="sag_no">No</string>
    <string name="hanging_too_low">Hanging too low</string>
    <string name="cable_damaged">Cable damaged</string>
    <string name="space_yes">Yes</string>
    <string name="space_no">No</string>
    <string name="bush_not_present">No</string>
    <string name="clamp_is_bent">Clamp is Bent</string>
    <string name="is_it_a_splice_pole_yes">Yes</string>
    <string name="is_it_a_splice_pole_no">No</string>
    <string name="is_access_cable_left_yes">Yes</string>
    <string name="is_access_cable_left_no">No</string>
    <string name="tension_rb_txt">Tension</string>
    <string name="suspension_rb_txt">Suspension</string>
    <string name="lock_wedge_yes">Yes</string>
    <string name="lock_wedge_no">No</string>
    <string name="road_crossing_yes">Yes</string>
    <string name="road_crossing_no">No</string>
    <string name="line_type_yes">Yes</string>
    <string name="line_type_no">No</string>
    <string name="line_type_1">33</string>
    <string name="line_type_2">11</string>
    <string name="line_type_3">LT Pole</string>
    <string name="line_type_4">1 KVA</string>
    <string name="clamp_installed_yes">Yes</string>
    <string name="clamp_installed_no">No</string>
    <string name="clamp_installed_errors_yes">Yes</string>
    <string name="clamp_installed_errors_no">No</string>
    <string name="enclosure_type_2way">2 way</string>
    <string name="enclosure_type_3way">3 way</string>
    <string name="enclosure_type4way">4 way</string>
    <string name="enclosure_frame_yes">Yes</string>
    <string name="enclosure_frame_no">No</string>
    <string name="bush_present_yes">Yes</string>
    <string name="cable_type_1">24 f</string>
    <string name="cable_type_2">12 f</string>
    <string name="cable_type_3">8 f</string>
    <string name="cable_type_4">6 f</string>
    <string name="cable_type_5">4 f</string>
    <string name="cable_type_6">2 f</string>
    <string name="wedge_rb_txt">Wedge</string>
    <string name="tension_wedge_rb_txt"><![CDATA[tension & wedge]]></string>
    <string name="splitter_box"><![CDATA[Splitter & Box type]]></string>
    <string name="clamp_error_yes">Yes</string>
    <string name="clamp_error_no">No</string>
    <string name="clamp_sag_yes">Yes</string>
    <string name="cable_sag_yes">Yes</string>
    <string name="cable_sag_no">No</string>
    <string name="ups_hint">ups</string>
    <string name="hint_battery_no">battery number</string>
    <string name="hint_enter_id">enter id</string>
    <string name="feasibility_ok">Feasibile</string>
    <string name="not_fisible">Not Feasible</string>
    <string name="takephoto_serialno_txt">Take Photo\n <font fgcolor='#FF0000'>*</font>Serial number</string>
    <string name="hint_caf_id">caf id</string>
    <string name="hint_wifi_pwd">wifi password</string>
    <string name="hint_net_speed">net speed</string>
    <string name="hint_telephone_number">telephone number</string>
    <string name="hint_serial_no">serial number</string>
</resources>