<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.user.apfiber.FeasibilitySurveyActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/testing_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/some_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="ID"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/id_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_form_field"
                android:ems="10"
                android:hint="@string/hint_enter_id"
                android:padding="16dp"
                android:prompt="@string/hint_gp_name"
                android:textColorHint="#CCCCCC"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/add_ins_commi_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:animateLayoutChanges="true"
                android:divider="@drawable/layout_gap"
                android:orientation="vertical"
                android:showDividers="middle" />

            <ImageView
                android:id="@+id/add_pop_pole_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_add_circle_green_32dp" />

            <com.example.user.apfiber.widget.ImagePickerView
                android:id="@+id/pole_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/progress_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:layout_weight=".1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/feasibile_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight=".9"
            android:background="@color/colorPrimary"
            android:text="@string/feasibility_ok"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1" />

        <Button
            android:id="@+id/feasible_not_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:background="@color/colorPrimary"
            android:text="@string/not_fisible"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
