<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="Switch"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/switch_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/switch_serial_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_form_field"
                    android:ems="10"
                    android:hint="@string/hint_switch"
                    android:padding="16dp"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/switch_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:text="@string/switch_add_text"
                android:textColor="#33AEFF"
                android:textColorLink="#33AEFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="Olt"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/olt_edt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/olt_serial_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_form_field"
                    android:ems="10"
                    android:hint="@string/hint_olt_serial_no"
                    android:padding="16dp"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/olt_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:text="@string/switch_add_text"
                android:textColor="#33AEFF"
                android:textColorLink="#33AEFF"
                android:textSize="14sp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>