<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.apfiber.InstallationSurveyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/some_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="6dp"
                    android:text="Uid"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/uid_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_form_field"
                    android:ems="10"
                    android:hint="@string/hint_enter_id"
                    android:padding="16dp"
                    android:prompt="@string/hint_gp_name"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/pole_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="Pole Details >>>"
                    android:textColor="#05f"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pop_premise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="Customer premises "
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/tk_customer_premises_photo_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="Take Photo"
                        android:textColor="#05f"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/customer_premise"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="GPON box "
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/tk_gpon_photo_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/takephoto_serialno_txt"
                        android:textColor="#05f"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/gpon_photo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                </LinearLayout>

                <EditText
                    android:id="@+id/gpon_serial_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_form_field"
                    android:ems="10"
                    android:hint="@string/hint_serial_no"
                    android:padding="16dp"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:text="Optional box"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/optional_box_spinner_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_form_field"
                        android:entries="@array/optional_box_spinner"
                        android:padding="16dp"
                        android:prompt="@string/hint_gp_name" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/tk_optional_box_photo_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:visibility="gone"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="Take Photo"
                        android:textColor="#05f"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/optional_box_photo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="CAF Id "
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/caf_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_form_field"
                    android:ems="10"
                    android:hint="@string/hint_caf_id"
                    android:padding="16dp"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="Telephone number "
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/telephone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_form_field"
                    android:ems="10"
                    android:hint="@string/hint_telephone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="16dp"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="Wifi Password "
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/wifi_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_form_field"
                    android:ems="10"
                    android:hint="@string/hint_wifi_pwd"
                    android:padding="16dp"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="Net Speed "
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/net_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_form_field"
                    android:ems="10"
                    android:hint="@string/hint_net_speed"
                    android:padding="16dp"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/tk_speed_test_photo_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="Take Speed test Photo"
                        android:textColor="#05f"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/speed_test_photo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="Customer Certificate "
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/tk_customer_certificate_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="Take Photo"
                        android:textColor="#05f"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/customer_certificate_photo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5" />

                </LinearLayout>

                <com.example.user.apfiber.widget.ImagePickerView
                    android:id="@+id/pole_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:visibility="gone" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <include layout="@layout/progress_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:layout_weight=".1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="Submit"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
